Updated jorje